chore: serve swagger api docs
